# anonimize-face

./: README.md  anonimyze_face.py  base_detector.py  face_recognition_task.py  ffmpeg_merger.bash  generate_cuda_ld_path.py  insight_face_detector.py  main.py  nvidia_patch.py  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements.txt  stopwatch.py  utils.py  video_processing.py  video_processor.py  yunet.py  yunet_detector.py
